--- a/src/pages/account-management/account-predictor/account-predictor-rewards-list/account-predictor-rewards-row/AccountPredictorRewardsRow.scss
+++ b/src/pages/account-management/account-predictor/account-predictor-rewards-list/account-predictor-rewards-row/AccountPredictorRewardsRow.scss
@@ -131,6 +131,7 @@ $themes: (light: (),
 
     .ui-collapse {
         cursor: pointer;
+        margin-right: 15px;
 
         &-expand {
             .ui-icon {
